--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a href="Still Life.html"><img src="images/images WS (1).jpg" alt="jewls"></img></a>
                     </div>
                     <div class="col-md">  
-                        <a href="Food.html"><img src="images/DSC_1110 copy.jpg" alt="shrimp"></img></a> 
+                        <a href="Food.html"><img src="images/DSC_111.jpg" alt="shrimp"></img></a> 
                     </div>
                 </div>
             </div>
