--- a/StillLife.html
+++ b/StillLife.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Still Life</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Poppins:wght@200&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <title>StillLife</title>
+    </head>
 <body>
+    
 
 
 
-                      <!-- social media icons -->
+             <!-- social media icons -->
              <div class="social-icons">
                 <ul class="menu simple">
                 <a href="https://www.instagram.com/hortencia_cisneros/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -25,7 +26,6 @@
                 <a href="https://github.com/hortencia718/?lang=en"><i class="fa fa-github" aria-hidden="true"></i></a>
                  </ul>
               </div> 
-
 
 
 
@@ -58,14 +58,14 @@
             <div class="img-container">
                 <div class="row">
                     <div class="col-md">
-                        <img src="images/stills/jewls copy.jpg " alt="lip balms"></img>
+                        <img src="images/StillLife/jewls copy.jpg " alt="jels"></img>
                     </div>
                         <div class="col-md">
-                            <img src="images/stills/jels.jpg" alt="jels"><img>
+                            <img src="images/StillLife/jels.jpg" alt="jels"><img>
                         </div>
-                        <!-- <div class="col-md">
-                            <img src="images/stills/25105018 copy.jpg" alt="jels"><img>
-                        </div> -->
+                        <div class="col-md">
+                            <img src="images/StillLife/saltnwisp.jpg" alt="jels"><img>
+                        </div>
 
                 </div>
             </div>
@@ -81,9 +81,8 @@
            <p>photography & Website Design by hortencia cisneros , 917.476.7147 &copy; </p>
           
        </footer>
+   
 
-
-
-    <script src="script.js" defer></script>
+            <script src="script.js" defer ></script>
 </body>
 </html>
