--- a/Portraits.html
+++ b/Portraits.html
@@ -15,12 +15,71 @@
 
 
 
-                    
+    <div class="social-icons">
+        <ul class="menu simple">
+        <a href="https://www.instagram.com/hortencia_cisneros/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <br>
+        <a href="https://www.linkedin.com/in/hortenciacisneros/?h1=en"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <br>
+        <a href="https://twitter.com/hortenciacisn/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <br>
+        <a href="https://github.com/hortencia718/?lang=en"><i class="fa fa-github" aria-hidden="true"></i></a>
+         </ul>
+      </div> 
+
+
+
+            <!-- main container put name and heading  -->
+
+            <div class="flex-container">
+                <h1>hortencia cisneros </h1>
+                    <h3>photography</h3> 
+            </div>
+
+
+
+
+              <!-- navbar -->
+        <div class="nav-container">
+            <nav>
+                <ul>
+                    <div class="items">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Still Life.html">Still Life</a></li>
+                        <li><a href="Food.html">Food</a></li>
+                        <li><a href="Portraits.html">Portraits</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </div>
 
 
 
 
 
+        <div class="img-container"> 
+            <div class="row">
+                <div class="col-md">
+                    <img src="images/Portraits/DSC_1004 copy.jpg" alt="person"></img>
+                </div>
+                <div class="col-md">  
+                    <img src="images/Portraits/DSC_0708 copy.jpg" alt="person"></img> 
+                </div>
+                <div class="col-md">  
+                    <img src="images/Portraits/DSC_0709A.jpg" alt="person"></img> 
+                </div>
+                <div class="col-md">  
+                    <img src="images/Portraits/DSC_0160-1 copy.jpg" alt="person"></img>
+                </div>
+                <div class="col-md">  
+                    <img src="images/Portraits/DSC_0576.jpg" alt="person"></img>
+                </div>
+                <div class="col-md">  
+                    <img src="images/Portraits/DSC_0651 copy.jpg" alt="person"></img>
+                </div>
+            </div>
+        </div>
 
 
 
