--- a/StillLife.html
+++ b/StillLife.html
@@ -42,7 +42,7 @@
                     <ul>
                         <div class="items">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="Still Life.html">Still LIfe</a></li>
+                            <li><a href="Still Life.html">Still Life</a></li>
                             <li><a href="Food.html">Food</a></li>
                             <li><a href="Portraits.html">Portraits</a></li>
                             <li><a href="Contact.html">Contact</a></li>
@@ -53,20 +53,20 @@
   
 
 
-    
-                            <!-- images  container-->
-            <div class="img-container">
+            <div class="img-container"> 
                 <div class="row">
                     <div class="col-md">
-                        <img src="images/StillLife/jewls copy.jpg " alt="jels"></img>
+                        <img src="images/Still Life/jewls copy.jpg" alt="fruit"></img>
                     </div>
-                        <div class="col-md">
-                            <img src="images/StillLife/jels.jpg" alt="jels"><img>
-                        </div>
-                        <div class="col-md">
-                            <img src="images/StillLife/saltnwisp.jpg" alt="jels"><img>
-                        </div>
-
+                    <div class="col-md">  
+                        <img src="images/Still Life/images for WS064.jpg" alt="pie"></img>
+                    </div>
+                    <div class="col-md">  
+                        <img src="images/Still Life/saltnwisp.jpg" alt="cookies"></img> 
+                    </div>
+                    <div class="col-md">  
+                        <img src="images/Still Life/jewls copy.jpg" alt="cookies"></img> 
+                    </div>
                 </div>
             </div>
         
