--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                     <div class="items">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="Still Life.html">Still LIfe</a></li>
+                        <li><a href="Still Life.html">Still Life</a></li>
                         <li><a href="Food.html">Food</a></li>
                         <li><a href="Portraits.html">Portraits</a></li>
                         <li><a href="Contact.html">Contact</a></li>
