--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,7 @@
                     <ul>
                         <div class="items">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="Still Life.html">Still LIfe</a></li>
+                            <li><a href="Still Life.html">Still Life</a></li>
                             <li><a href="Food.html">Food</a></li>
                             <li><a href="Portraits.html">Portraits</a></li>
                             <li><a href="Contact.html">Contact</a></li>
@@ -57,10 +57,10 @@
 
 
 
-            <h1>Bio</h1>
+            <!-- <h1>Bio</h1>
             <div class="Bio">
                 <p></p>
-            </div>
+            </div> -->
           
 
             <br>
