working on contact page

--- a/StillLife.html
+++ b/StillLife.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Poppins:wght@200&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <title>StillLife</title>
+     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+    <title>StillLife</title>
     </head>
 <body>
     
@@ -42,7 +43,7 @@
                     <ul>
                         <div class="items">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="Still Life.html">Still Life</a></li>
+                            <li><a href="StillLife.html">Still Life</a></li>
                             <li><a href="Food.html">Food</a></li>
                             <li><a href="Portraits.html">Portraits</a></li>
                             <li><a href="Contact.html">Contact</a></li>
@@ -64,9 +65,9 @@
                     <div class="col-md">  
                         <img src="images/Still Life/saltnwisp.jpg" alt="cookies"></img> 
                     </div>
-                    <div class="col-md">  
+                    <!-- <div class="col-md">  
                         <img src="images/Still Life/jewls copy.jpg" alt="cookies"></img> 
-                    </div>
+                    </div> -->
                 </div>
             </div>
         
