added footer to portraits page

--- a/Portraits.html
+++ b/Portraits.html
@@ -83,6 +83,11 @@
 
 
 
+        <footer>
+            <p>photography & Website Design by hortencia cisneros , 917.476.7147  &copy;</p>
+           
+        </footer>
+
     <script src="script.js" defer></script>
 </body>
 </html>
