--- a/Food.html
+++ b/Food.html
@@ -80,10 +80,9 @@
                         <div class="col-md">  
                             <img src="images/Food/DSC_1745 copy.jpg" alt="cookies"></img> 
                         </div>
-                        <div class="col-md">  
+                        <!-- <div class="col-md">  
                             <img src="images/Food/blueplatefish.jpg" alt="swiss chard"></img> 
-                        </div>
-                        
+                        </div> -->
                     </div>
                 </div>
         
