--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <ul class="menu simple">
         <a href="https://www.instagram.com/hortencia_cisneros/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <br>
+        <br>
         <a href="https://www.linkedin.com/in/hortenciacisneros/?h1=en"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <br>
         <br>
         <a href="https://twitter.com/hortenciacisn/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <br>
@@ -65,7 +67,7 @@
                         <a href ="Portraits.html"><img src="images/DSC_0226-1.jpg" alt="tina"></img></a>
                     </div>
                     <div class="col-md">  
-                        <a href="Still Life.html"><img src="images/images WS (1).jpg" alt="jewls"></img></a>
+                        <a href="Still Life.html"><img src="images/images WS (1).jpg" alt="jewels"></img></a>
                     </div>
                     <div class="col-md">  
                         <a href="Food.html"><img src="images/DSC_111.jpg" alt="shrimp"></img></a> 
@@ -80,7 +82,7 @@
                           <!-- footer here     -->
           
     <footer>
-        <p>photography & Website Design by hortencia cisneros , 917.476.7147  &copy;</p>
+        <p>photography and Website Design by hortencia cisneros , 917.476.7147  &copy;</p>
        
     </footer>
 
